test/bad/functions/type01.px

func f(x: Int): Void def
    return

func g(x: String): Void def
    return

h = f
h = g
